1.8.6.dev0
 * #794: Fix a traceback when the "repositories" option contains both strings and key/value pairs.
 * #800: Add configured repository labels to the JSON output for all actions.

1.8.5
 * #701: Add a "skip_actions" option to skip running particular actions, handy for append-only or
   checkless configurations. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/set-up-backups/#skipping-actions
 * #701: Deprecate the "disabled" value for the "checks" option in favor of the new "skip_actions"
   option.
 * #745: Constants now apply to included configuration, not just the file doing the includes. As a
   side effect of this change, constants no longer apply to option names and only substitute into
   configuration values.
 * #779: Add a "--match-archives" flag to the "check" action for selecting the archives to check,
   overriding the existing "archive_name_format" and "match_archives" options in configuration.
 * #779: Only parse "--override" values as complex data types when they're for options of those
   types.
 * #782: Fix environment variable interpolation within configured repository paths.
 * #782: Add configuration constant overriding via the existing "--override" flag.
 * #783: Upgrade ruamel.yaml dependency to support version 0.18.x.
 * #784: Drop support for Python 3.7, which has been end-of-lifed.

1.8.4
 * #715: Add a monitoring hook for sending backup status to a variety of monitoring services via the
   Apprise library. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#apprise-hook
 * #748: When an archive filter causes no matching archives for the "rlist" or "info"
   actions, warn the user and suggest how to remove the filter.
 * #768: Fix a traceback when an invalid command-line flag or action is used.
 * #771: Fix normalization of deprecated sections ("location:", "storage:", "hooks:", etc.) to
   support empty sections without erroring.